review repformula evaluation

--- a/demos/BEM_Laplace_Capacitor.ipynb
+++ b/demos/BEM_Laplace_Capacitor.ipynb
@@ -105,13 +105,9 @@
    "outputs": [],
    "source": [
     "j = GridFunction(fesL2)\n",
-    "#with TaskManager():   \n",
-    "    #V = SingleLayerPotentialOperator(fesL2, intorder=12, eps=1e-4)\n",
-    "    #K = DoubleLayerPotentialOperator(fesH1, fesL2, intorder=12, eps=1e-4)\n",
-    "    #M = BilinearForm( uH1.Trace() * v.Trace() * ds(bonus_intorder=3)).Assemble()\n",
     "with TaskManager():\n",
-    "    V = LaplaceSL(u*ds)*v*ds\n",
-    "    K = LaplaceDL(uH1*ds)*v*ds\n",
+    "    V = LaplaceSL(u*ds(bonus_intorder=3))*v*ds(bonus_intorder=3)\n",
+    "    K = LaplaceDL(uH1*ds(bonus_intorder=3))*v*ds(bonus_intorder=3)\n",
     "    M = BilinearForm(uH1*v*ds(bonus_intorder=3)).Assemble()"
    ]
   },
