--- a/demos/Laplace_DtN_indirect.ipynb
+++ b/demos/Laplace_DtN_indirect.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "667a666a-3324-4cc0-a3f0-47ba7aa32d5c",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "c7abb299-0827-4f90-8d0f-6239f08249b2",
    "metadata": {},
    "outputs": [],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "d8c2c6d6-b3b3-4f91-8e2b-b63c146b6a09",
    "metadata": {},
    "outputs": [],
@@ -99,6 +99,24 @@
   },
   {
    "cell_type": "markdown",
+   "id": "49503a8f-a847-4dd5-8b3e-2289044dd1e1",
+   "metadata": {},
+   "source": [
+    "**Details**\n",
+    "  \n",
+    "For any $u_j, v_i \\in H^{-\\frac12}(\\Gamma)$, the single layer potential operator is implemented as follows \n",
+    "\n",
+    "$$ V_{ij} = \\langle v_i, \\gamma_0 \\mathrm{SL}(u_j) \\rangle_{-\\frac12} = \\frac{1}{4\\pi} \\int\\limits_\\Gamma\\int\\limits_\\Gamma \\frac{1}{\\|x-y\\|} \\, u_j(x) \\, v_i(y) \\, \\mathrm{d} s_{y} \\, \\mathrm{d} s_x $$ \n",
+    "\n",
+    "You may assemble $V$ it by\n",
+    "\n",
+    "```\n",
+    "V = LaplaceSL(u*ds)*v*ds\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1b0307f4-ad7f-4252-84ab-f4c8b14c896d",
    "metadata": {},
    "source": [
@@ -107,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "c3194f56-dc87-487a-9b08-1dcd99035665",
    "metadata": {},
    "outputs": [],
@@ -128,68 +146,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "8acec479-eb95-4258-a200-2389cacdee45",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[2KCG iteration 1, residual = 2.185632470081333     \n",
-      "\u001b[2KCG iteration 2, residual = 0.5511118070234002     \n",
-      "\u001b[2KCG iteration 3, residual = 0.1311310259046071     \n",
-      "\u001b[2KCG iteration 4, residual = 0.031078990634675407     \n",
-      "\u001b[2KCG iteration 5, residual = 0.007370161304676196     \n",
-      "\u001b[2KCG iteration 6, residual = 0.0017872719313664837     \n",
-      "\u001b[2KCG iteration 7, residual = 0.0005164640897887448     \n",
-      "\u001b[2KCG iteration 8, residual = 0.0002492780567432234     \n",
-      "\u001b[2KCG iteration 9, residual = 0.0002750528160501377     \n",
-      "\u001b[2KCG iteration 10, residual = 0.00018042982377223352     \n",
-      "\u001b[2KCG iteration 11, residual = 0.00013054626619579224     \n",
-      "\u001b[2KCG iteration 12, residual = 3.722731240425114e-05     \n",
-      "\u001b[2KCG iteration 13, residual = 3.312346253562036e-05     \n",
-      "\u001b[2KCG iteration 14, residual = 1.6103648110636815e-05     \n",
-      "\u001b[2KCG iteration 15, residual = 9.915860637644881e-06     \n",
-      "\u001b[2KCG iteration 16, residual = 1.0658417163271707e-05     \n",
-      "\u001b[2KCG iteration 17, residual = 7.46678957674621e-06     \n",
-      "\u001b[2KCG iteration 18, residual = 7.402419529671319e-06     \n",
-      "\u001b[2KCG iteration 19, residual = 5.472646553019771e-06     \n",
-      "\u001b[2KCG iteration 20, residual = 2.356922125726932e-06     \n",
-      "\u001b[2KCG iteration 21, residual = 1.6475718839994998e-06     \n",
-      "\u001b[2KCG iteration 22, residual = 1.7135506527704204e-06     \n",
-      "\u001b[2KCG iteration 23, residual = 1.312043478674566e-06     \n",
-      "\u001b[2KCG iteration 24, residual = 6.358200326508156e-07     \n",
-      "\u001b[2KCG iteration 25, residual = 1.108025262788844e-06     \n",
-      "\u001b[2KCG iteration 26, residual = 2.622837540696681e-07     \n",
-      "\u001b[2KCG iteration 27, residual = 2.383934356822109e-07     \n",
-      "\u001b[2KCG iteration 28, residual = 2.521414432713882e-07     \n",
-      "\u001b[2KCG iteration 29, residual = 1.3798656196618835e-07     \n",
-      "\u001b[2KCG iteration 30, residual = 1.3285753302787534e-07     \n",
-      "\u001b[2KCG iteration 31, residual = 7.050799951091061e-08     \n",
-      "\u001b[2KCG iteration 32, residual = 1.8106019203450803e-07     \n",
-      "\u001b[2KCG iteration 33, residual = 5.2934896081372236e-08     \n",
-      "\u001b[2KCG iteration 34, residual = 3.767213805541917e-08     \n",
-      "\u001b[2KCG iteration 35, residual = 3.1220430901107606e-08     \n",
-      "\u001b[2KCG iteration 36, residual = 2.9167854673403806e-08     \n",
-      "\u001b[2KCG iteration 37, residual = 1.3858160147946011e-08     \n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4b71774bc3fd40a7bc5e6ec3f89ac2c3",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "WebGuiWidget(layout=Layout(height='50vh', width='100%'), value={'gui_settings': {}, 'ngsolve_version': '6.2.25…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "j = GridFunction(fesL2)\n",
     "pre = BilinearForm(u*v*ds, diagonal=True).Assemble().mat.Inverse()\n",
@@ -200,21 +160,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "2ede1e97-2b3b-4949-98d9-acb703b98fcf",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "ngsolve.bem.IntegralOperator"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "type(V)\n",
     "#for t in Timers():\n",
@@ -224,61 +173,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "718847e7-00e6-476a-a777-6c007903090a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4dbf04409068448cb2c49d924b1f4abf",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "WebGuiWidget(layout=Layout(height='50vh', width='100%'), value={'gui_settings': {}, 'ngsolve_version': '6.2.25…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "BaseWebGuiScene"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "screen = WorkPlane(Axes( (0,0,0), Z, X)).RectangleC(0.5,0.5).Face()\n",
+    "screen.faces.name=\"screen\"\n",
     "vismesh = screen.GenerateMesh(maxh=0.05)\n",
-    "#Draw (vismesh);\n",
-    "LSL = LaplaceSL( u*ds)\n",
-    "u_num = LSL(j)\n",
-    "u_num.BuildLocalExpansion(vismesh.Boundaries(\".*\")) #MLFMM evaluation\n",
-    "Draw(u_num,vismesh)"
+    "#Draw (vismesh);"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "49503a8f-a847-4dd5-8b3e-2289044dd1e1",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49b63b45-4288-4422-8b8c-44338aed9ed0",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "**Details**\n",
-    "  \n",
-    "For any $u_j, v_i \\in H^{-\\frac12}(\\Gamma)$, the single layer potential operator is implemented as follows \n",
-    "\n",
-    "$$ V_{ij} = \\langle v_i, \\gamma_0 \\mathrm{SL}(u_j) \\rangle_{-\\frac12} = \\frac{1}{4\\pi} \\int\\limits_\\Gamma\\int\\limits_\\Gamma \\frac{1}{\\|x-y\\|} \\, u_j(x) \\, v_i(y) \\, \\mathrm{d} s_{y} \\, \\mathrm{d} s_x $$ \n",
-    "\n",
-    "You may assemble $V$ it by\n",
-    "\n",
-    "```\n",
-    "V = LaplaceSL(u*ds)*v*ds\n",
-    "```"
+    "SLPotential = LaplaceSL( u*ds)\n",
+    "repformula = SLPotential(j)\n",
+    "fes_screen = H1(vismesh, order=5)\n",
+    "gf_screen = GridFunction(fes_screen)\n",
+    "with TaskManager():\n",
+    "    gf_screen.Set(repformula, definedon=vismesh.Boundaries(\"screen\"))\n",
+    "Draw(repformula,vismesh)"
    ]
   },
   {
