--- a/demos/Laplace_NtD_direct.ipynb
+++ b/demos/Laplace_NtD_direct.ipynb
@@ -82,7 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fesL2 = SurfaceL2(mesh, order=2, dual_mapping=False) # TODO: check interpolation with option dual_mapping=True  \n",
+    "fesL2 = SurfaceL2(mesh, order=2, dual_mapping=False) \n",
     "u,v = fesL2.TnT()\n",
     "fesH1 = H1(mesh, order=2, definedon=mesh.Boundaries(\".*\"))\n",
     "uH1,vH1 = fesH1.TnT()\n",
@@ -140,6 +140,37 @@
     "-  $\\mathrm{D}$ is the hypersingular operator and the stabilisation $(\\mathrm D + \\mathrm{S})$ is regular and symmetric.\n",
     "- $\\mathrm{M}$ is a mass matrix.\n",
     "- $\\mathrm{K}'$ is the adjoint double layer operator. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e89a50d-36e8-4b0e-83d2-46fe9e29e9e4",
+   "metadata": {},
+   "source": [
+    "**Details**\n",
+    "  \n",
+    "For any $u_j, v_i \\in H^{\\frac12}(\\Gamma)$ the hypersingular operator is implemented as follows (reference below)\n",
+    "\n",
+    "$$ D_{ij} = \\langle v_i, \\gamma_1 \\mathrm{DL}(u_j) \\rangle_{-\\frac12} = \\frac{1}{4\\pi} \\int\\limits_\\Gamma\\int\\limits_\\Gamma \\frac{ \\langle \\mathrm{\\boldsymbol {curl}}_\\Gamma  \\,u_j(x), \\mathrm{\\boldsymbol{curl}}_\\Gamma\\, v_i(y) \\rangle}{\\|x-y\\|} \\, \\mathrm{d} s_{y} \\, \\mathrm{d} s_x $$ \n",
+    "\n",
+    "This explicit represenation of $D$ is the singular layer potential operator with vector valued surface curl operator applied on trial and test functions. You may assemble $D$ it by\n",
+    "\n",
+    "```\n",
+    "D = LaplaceSL(curl(u)*ds)*curl(v)*ds\n",
+    "```\n",
+    "\n",
+    "Recall that for any $v_i\\in H^{-\\frac12}(\\Gamma)$ and $w_j \\in H^{\\frac12}(\\Gamma)$ the double layer potential operators $\\mathrm K$ has been given by\n",
+    "\n",
+    "$$ \\begin{array}{rcl cl} K_{ij} &=& \\langle v_i, \\gamma_0 \\mathrm{DL}(w_j) \\rangle_{-\\frac12} &=& \\displaystyle \\frac{1}{4\\pi} \\int\\limits_\\Gamma\\int\\limits_\\Gamma n_y\\cdot \\nabla_y \\frac{1}{\\|x-y\\|} \\, w_j(x) \\, v_i(y) \\, \\mathrm{d} s_{y} \\, \\mathrm{d} s_x \\end{array}$$\n",
+    "\n",
+    "And this means that the adjoint double layer potential operator equals its transposed, $\\mathrm K^\\intercal$.  \n",
+    "\n",
+    "You may assemble $\\mathrm V$ and $\\mathrm K$ it by\n",
+    "\n",
+    "```\n",
+    "V = LaplaceSL(u*ds)*v*ds\n",
+    "K = LaplaceDL(w*ds)*v*ds\n",
+    "```"
    ]
   },
   {
@@ -251,58 +282,40 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b622504-e156-414c-a516-ed280b40914e",
+   "id": "b07db048-145e-44f0-90aa-afdde6098897",
    "metadata": {},
    "outputs": [],
    "source": [
     "screen = WorkPlane(Axes( (0,0,0), Z, X)).RectangleC(0.5,0.5).Face()\n",
-    "vismesh = screen.GenerateMesh(maxh=0.05)\n",
-    "#Draw (vismesh);"
+    "screen.faces.name=\"screen\"\n",
+    "vismesh = screen.GenerateMesh(maxh=0.05)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc032bf1-c606-41f0-aa9e-685f2eaf2d30",
+   "id": "bab431b3-5883-4dfe-a57b-cca125d4a97f",
    "metadata": {},
    "outputs": [],
    "source": [
     "LSPotential = LaplaceSL( u*ds )\n",
-    "LDPotential = LaplaceDL( uH1*ds )\n",
-    "Draw(LSPotential(j) - LDPotential(m), vismesh) # QUESTION: what do we draw here? \n",
-    "Draw(uexa, vismesh) # exact solution ( same question )\n",
-    "#Draw(LSPotential(j) - LDPotential(m) - uexa, vismesh) # THIS DOES NOT WORK (apart from the constant ...) "
+    "LDPotential = LaplaceDL( uH1*ds )"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "9e89a50d-36e8-4b0e-83d2-46fe9e29e9e4",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84299ca6-d911-41ee-8595-f25b2634e0a4",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "**Details**\n",
-    "  \n",
-    "For any $u_j, v_i \\in H^{\\frac12}(\\Gamma)$ the hypersingular operator is implemented as follows (reference below)\n",
-    "\n",
-    "$$ D_{ij} = \\langle v_i, \\gamma_1 \\mathrm{DL}(u_j) \\rangle_{-\\frac12} = \\frac{1}{4\\pi} \\int\\limits_\\Gamma\\int\\limits_\\Gamma \\frac{ \\langle \\mathrm{\\boldsymbol {curl}}_\\Gamma  \\,u_j(x), \\mathrm{\\boldsymbol{curl}}_\\Gamma\\, v_i(y) \\rangle}{\\|x-y\\|} \\, \\mathrm{d} s_{y} \\, \\mathrm{d} s_x $$ \n",
-    "\n",
-    "This explicit represenation of $D$ is the singular layer potential operator with vector valued surface curl operator applied on trial and test functions. You may assemble $D$ it by\n",
-    "\n",
-    "```\n",
-    "D = LaplaceSL(curl(u)*ds)*curl(v)*ds\n",
-    "```\n",
-    "\n",
-    "Recall that for any $v_i\\in H^{-\\frac12}(\\Gamma)$ and $w_j \\in H^{\\frac12}(\\Gamma)$ the double layer potential operators $\\mathrm K$ has been given by\n",
-    "\n",
-    "$$ \\begin{array}{rcl cl} K_{ij} &=& \\langle v_i, \\gamma_0 \\mathrm{DL}(w_j) \\rangle_{-\\frac12} &=& \\displaystyle \\frac{1}{4\\pi} \\int\\limits_\\Gamma\\int\\limits_\\Gamma n_y\\cdot \\nabla_y \\frac{1}{\\|x-y\\|} \\, w_j(x) \\, v_i(y) \\, \\mathrm{d} s_{y} \\, \\mathrm{d} s_x \\end{array}$$\n",
-    "\n",
-    "And this means that the adjoint double layer potential operator equals its transposed, $\\mathrm K^\\intercal$.  \n",
-    "\n",
-    "You may assemble $\\mathrm V$ and $\\mathrm K$ it by\n",
-    "\n",
-    "```\n",
-    "V = LaplaceSL(u*ds)*v*ds\n",
-    "K = LaplaceDL(w*ds)*v*ds\n",
-    "```"
+    "repformula = LSPotential(j) - LDPotential(m)\n",
+    "fes_screen = H1(vismesh, order=5)\n",
+    "gf_screen = GridFunction(fes_screen)\n",
+    "with TaskManager():\n",
+    "    gf_screen.Set(repformula, definedon=vismesh.Boundaries(\"screen\"))\n",
+    "Draw(gf_screen)\n",
+    "Draw(repformula - uexa, vismesh) # exact up to a constant "
    ]
   },
   {
