--- a/demos/Maxwell_DtN_direct.ipynb
+++ b/demos/Maxwell_DtN_direct.ipynb
@@ -152,7 +152,37 @@
     "* $\\mathrm{M}$ is the mass matrix.\n",
     "* $\\mathrm K$ is the Maxwell double layer operator. $K$ is quadratic:\n",
     "\n",
-    "The assembly of the potential operators is declarative and close to their actual implementations. All contributions to the Maxwell layer potentials are derivates of the Helmholtz layer potentials and thus, we use the Helmholtz operators as building blocks (explicite formulas are given at the end of the notebook)."
+    "The assembly of the potential operators is declarative and close to their actual implementations. All contributions to the Maxwell layer potentials are derivates of the Helmholtz layer potentials and thus, we use the Helmholtz operators as building blocks."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ede08b98-8609-433f-872f-9bc19c52fd95",
+   "metadata": {},
+   "source": [
+    "**Details**\n",
+    "\n",
+    "For a trial function $\\boldsymbol u_j \\in H^{-\\frac12}(\\mathrm{div}_\\Gamma,\\Gamma)$ and a test function $\\boldsymbol v_i \\in H^{-\\frac12}(\\mathrm{div}_\\Gamma,\\Gamma)$ the Maxwell single layer potential operator entry $V_{ij}$ can formally written as\n",
+    "\n",
+    "$$ V_{ij} = \\kappa \\, \\int\\limits_\\Gamma \\int\\limits_\\Gamma \\displaystyle{ \\frac{1}{4\\,\\pi} \\, \\frac{e^{i\\,\\kappa\\,\\|x-y\\|}}{\\| x-y\\|} } \\, \\boldsymbol u_j(y) \\cdot \\boldsymbol v_i(x) \\, \\mathrm{d}s_x \\mathrm{d} s_x - \\frac{1}{\\kappa} \\int\\limits_\\Gamma \\int\\limits_\\Gamma \\displaystyle{ \\frac{1}{4\\,\\pi}\\, \\frac{e^{i\\,\\kappa\\,\\|x-y\\|}}{\\| x-y\\|} } \\, \\mathrm{div}_\\Gamma \\boldsymbol u_j(y)\\,  \\mathrm{div}_\\Gamma \\boldsymbol v_i(x)\\, \\mathrm{d}\\sigma_y\\,\\mathrm d s_x\\,. $$ \n",
+    "\n",
+    "The two contributions are derivates of the Helmholtz single layer potential operator and may be implemented as such:   \n",
+    "\n",
+    "```\n",
+    "V = kappa * (HelmholtzSL(u*ds, kappa)*v*ds - 1/kappa * HelmholtzSL(div(u)*ds, kappa)*div(v)*ds\n",
+    "```\n",
+    "\n",
+    "For a trial function $\\boldsymbol u_j \\in H^{-\\frac12}(\\mathrm{curl}_\\Gamma,\\Gamma)$ and a test function $\\boldsymbol v_i \\in H^{-\\frac12}(\\mathrm{div}_\\Gamma,\\Gamma)$ the Maxwell double layer potential operator entry $K_{ij}$ can formally written as\n",
+    "\n",
+    "$$ K_{ij} = \\int\\limits_\\Gamma \\displaystyle\\int\\limits_\\Gamma \\displaystyle{ \\frac{1}{4\\,\\pi} \\, \\nabla_x \\frac{e^{i\\,\\kappa\\,\\|x-y\\|}}{\\| x-y\\|} }  \\times  ( \\boldsymbol n \\times \\boldsymbol{u}_j(y) ) \\, \\mathrm{d} s_y \\cdot \\boldsymbol v_i(x) \\mathrm d s_x\\,.$$\n",
+    "\n",
+    "Giving transparency to its relation to the Helmholtz double layer potential operator, you may assemble it as follows:\n",
+    "\n",
+    "\n",
+    "```\n",
+    "K = HelmholtzDL( u.Operator(\"rotated_trace\") * ds, kappa) * v * ds\n",
+    "```\n",
+    "\n"
    ]
   },
   {
@@ -231,36 +261,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ede08b98-8609-433f-872f-9bc19c52fd95",
-   "metadata": {},
-   "source": [
-    "**Details on Layer Potential Operators**\n",
-    "\n",
-    "For a trial function $\\boldsymbol u_j \\in H^{-\\frac12}(\\mathrm{div}_\\Gamma,\\Gamma)$ and a test function $\\boldsymbol v_i \\in H^{-\\frac12}(\\mathrm{div}_\\Gamma,\\Gamma)$ the Maxwell single layer potential operator entry $V_{ij}$ can formally written as\n",
-    "\n",
-    "$$ V_{ij} = \\kappa \\, \\int\\limits_\\Gamma \\int\\limits_\\Gamma \\displaystyle{ \\frac{1}{4\\,\\pi} \\, \\frac{e^{i\\,\\kappa\\,\\|x-y\\|}}{\\| x-y\\|} } \\, \\boldsymbol u_j(y) \\cdot \\boldsymbol v_i(x) \\, \\mathrm{d}s_x \\mathrm{d} s_x - \\frac{1}{\\kappa} \\int\\limits_\\Gamma \\int\\limits_\\Gamma \\displaystyle{ \\frac{1}{4\\,\\pi}\\, \\frac{e^{i\\,\\kappa\\,\\|x-y\\|}}{\\| x-y\\|} } \\, \\mathrm{div}_\\Gamma \\boldsymbol u_j(y)\\,  \\mathrm{div}_\\Gamma \\boldsymbol v_i(x)\\, \\mathrm{d}\\sigma_y\\,\\mathrm d s_x\\,. $$ \n",
-    "\n",
-    "The two contributions are derivates of the Helmholtz single layer potential operator and may be implemented as such:   \n",
-    "\n",
-    "```\n",
-    "V = kappa * (HelmholtzSL(u*ds, kappa)*v*ds - 1/kappa * HelmholtzSL(div(u)*ds, kappa)*div(v)*ds\n",
-    "```\n",
-    "\n",
-    "For a trial function $\\boldsymbol u_j \\in H^{-\\frac12}(\\mathrm{curl}_\\Gamma,\\Gamma)$ and a test function $\\boldsymbol v_i \\in H^{-\\frac12}(\\mathrm{div}_\\Gamma,\\Gamma)$ the Maxwell double layer potential operator entry $K_{ij}$ can formally written as\n",
-    "\n",
-    "$$ K_{ij} = \\int\\limits_\\Gamma \\displaystyle\\int\\limits_\\Gamma \\displaystyle{ \\frac{1}{4\\,\\pi} \\, \\nabla_x \\frac{e^{i\\,\\kappa\\,\\|x-y\\|}}{\\| x-y\\|} }  \\times  ( \\boldsymbol n \\times \\boldsymbol{u}_j(y) ) \\, \\mathrm{d} s_y \\cdot \\boldsymbol v_i(x) \\mathrm d s_x\\,.$$\n",
-    "\n",
-    "Giving transparency to its relation to the Helmholtz double layer potential operator, you may assemble it as follows:\n",
-    "\n",
-    "\n",
-    "```\n",
-    "K = HelmholtzDL( u.Operator(\"rotated_trace\") * ds, kappa) * v * ds\n",
-    "```\n",
-    "\n"
-   ]
   },
   {
    "cell_type": "markdown",
