--- a/demos/Maxwell_DtN_indirect.ipynb
+++ b/demos/Maxwell_DtN_indirect.ipynb
@@ -152,7 +152,25 @@
     "\n",
     "$$ V\\, \\mathrm j = \\mathrm{M} \\, \\mathrm m\\,,$$ \n",
     "\n",
-    "where the single layer operator $V$ on the left is a regular and symmetric matrix. Its assembly is declarative and close to their actual implementations. All contributions to the Maxwell layer potentials are derivates of the Helmholtz layer potentials and thus, we use the Helmholtz operators as building blocks (explicit formulas are given below)."
+    "where the single layer operator $V$ on the left is a regular and symmetric matrix. Its assembly is declarative and close to their actual implementations. All contributions to the Maxwell layer potentials are derivates of the Helmholtz layer potentials and thus, we use the Helmholtz operators as building blocks."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea385457-1e87-40f9-819d-9203aa52c828",
+   "metadata": {},
+   "source": [
+    "**Details**\n",
+    "\n",
+    "For a trial function $\\boldsymbol u_j \\in H^{-\\frac12}(\\mathrm{div}_\\Gamma,\\Gamma)$ and a test function $\\boldsymbol v_i \\in H^{-\\frac12}(\\mathrm{div}_\\Gamma,\\Gamma)$ the Maxwell single layer potential operator entry $V_{ij}$ can formally written as\n",
+    "\n",
+    "$$ V_{ij} = \\kappa \\, \\int\\limits_\\Gamma \\int\\limits_\\Gamma \\displaystyle{ \\frac{1}{4\\,\\pi} \\, \\frac{e^{i\\,\\kappa\\,\\|x-y\\|}}{\\| x-y\\|} } \\, \\boldsymbol u_j(y) \\cdot \\boldsymbol v_i(x) \\, \\mathrm{d}s_x \\mathrm{d} s_x - \\frac{1}{\\kappa} \\int\\limits_\\Gamma \\int\\limits_\\Gamma \\displaystyle{ \\frac{1}{4\\,\\pi}\\, \\frac{e^{i\\,\\kappa\\,\\|x-y\\|}}{\\| x-y\\|} } \\, \\mathrm{div}_\\Gamma \\boldsymbol u_i(y)\\,  \\mathrm{div}_\\Gamma \\boldsymbol v_i(x)\\, \\mathrm{d}\\sigma_y\\,\\mathrm d s_x\\,. $$ \n",
+    "\n",
+    "The two contributions are derivates of the Helmholtz single layer potential operator and may be implemented as such:   \n",
+    "\n",
+    "```\n",
+    "V = kappa * (HelmholtzSL(u*ds, kappa)*v*ds - 1/kappa * HelmholtzSL(div(u)*ds, kappa)*div(v)*ds\n",
+    "```\n"
    ]
   },
   {
@@ -294,21 +312,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea385457-1e87-40f9-819d-9203aa52c828",
+   "id": "bb97210c-5c91-4af4-a1f9-e3430ba8523d",
    "metadata": {},
    "source": [
-    "**Details on Layer Potential Operator**\n",
-    "\n",
-    "For a trial function $\\boldsymbol u_j \\in H^{-\\frac12}(\\mathrm{div}_\\Gamma,\\Gamma)$ and a test function $\\boldsymbol v_i \\in H^{-\\frac12}(\\mathrm{div}_\\Gamma,\\Gamma)$ the Maxwell single layer potential operator entry $V_{ij}$ can formally written as\n",
-    "\n",
-    "$$ V_{ij} = \\kappa \\, \\int\\limits_\\Gamma \\int\\limits_\\Gamma \\displaystyle{ \\frac{1}{4\\,\\pi} \\, \\frac{e^{i\\,\\kappa\\,\\|x-y\\|}}{\\| x-y\\|} } \\, \\boldsymbol u_j(y) \\cdot \\boldsymbol v_i(x) \\, \\mathrm{d}s_x \\mathrm{d} s_x - \\frac{1}{\\kappa} \\int\\limits_\\Gamma \\int\\limits_\\Gamma \\displaystyle{ \\frac{1}{4\\,\\pi}\\, \\frac{e^{i\\,\\kappa\\,\\|x-y\\|}}{\\| x-y\\|} } \\, \\mathrm{div}_\\Gamma \\boldsymbol u_i(y)\\,  \\mathrm{div}_\\Gamma \\boldsymbol v_i(x)\\, \\mathrm{d}\\sigma_y\\,\\mathrm d s_x\\,. $$ \n",
-    "\n",
-    "The two contributions are derivates of the Helmholtz single layer potential operator and may be implemented as such:   \n",
-    "\n",
-    "```\n",
-    "V = kappa * (HelmholtzSL(u*ds, kappa)*v*ds - 1/kappa * HelmholtzSL(div(u)*ds, kappa)*div(v)*ds\n",
-    "```\n",
-    "\n",
     "\n",
     "**References**\n",
     "\n",
@@ -316,11 +322,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "23220268-e118-441f-b53e-9c361504682d",
+   "cell_type": "markdown",
+   "id": "e3845e07-3c01-4584-b882-2c5711da3559",
    "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
