Bem laplace capacitor use PotentialCF evaluation instead of GetPotential

--- a/demos/BEM_Laplace_Capacitor.ipynb
+++ b/demos/BEM_Laplace_Capacitor.ipynb
@@ -106,8 +106,10 @@
    "source": [
     "j = GridFunction(fesL2)\n",
     "with TaskManager():\n",
-    "    V = LaplaceSL(u*ds(bonus_intorder=3))*v*ds(bonus_intorder=3)\n",
-    "    K = LaplaceDL(uH1*ds(bonus_intorder=3))*v*ds(bonus_intorder=3)\n",
+    "    SLPotential = LaplaceSL(u*ds(bonus_intorder=3))\n",
+    "    DLPotential = LaplaceDL(uH1*ds(bonus_intorder=3))\n",
+    "    V = SLPotential*v*ds(bonus_intorder=3)\n",
+    "    K = DLPotential*v*ds(bonus_intorder=3)\n",
     "    M = BilinearForm(uH1*v*ds(bonus_intorder=3)).Assemble()"
    ]
   },
@@ -155,7 +157,7 @@
     "gf_screen = GridFunction(fes_screen)\n",
     "print (\"ndofscreen=\", fes_screen.ndof)\n",
     "with TaskManager():\n",
-    "    gf_screen.Set(-V.GetPotential(j)+K.GetPotential(utop)+K.GetPotential(ubot), definedon=mesh_screen.Boundaries(\".*\"), dual=False)\n",
+    "    gf_screen.Set(-SLPotential(j)+DLPotential(utop)+DLPotential(ubot), definedon=mesh_screen.Boundaries(\".*\"), dual=False)\n",
     "Draw (gf_screen)"
    ]
   },
@@ -186,7 +188,7 @@
     "fes_shell = H1(mesh_shell, order=3)\n",
     "gf_shell = GridFunction(fes_shell)\n",
     "with TaskManager():\n",
-    "    gf_shell.Set(-V.GetPotential(j)+K.GetPotential(utop)+K.GetPotential(ubot), definedon=mesh_shell.Boundaries(\"outer\"), dual=False)\n",
+    "    gf_shell.Set(-SLPotential(j)+DLPotential(utop)+DLPotential(ubot), definedon=mesh_shell.Boundaries(\"outer\"), dual=False)\n",
     "Draw(gf_shell)"
    ]
   },
@@ -271,7 +273,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
