Postprocessing on screen in Laplace_Mixed

--- a/demos/Laplace_Mixed.ipynb
+++ b/demos/Laplace_Mixed.ipynb
@@ -215,7 +215,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1cde9485-5a8c-4be5-b1d5-059e825a1457",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "with TaskManager():\n",
@@ -266,17 +268,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f4278e12-08dd-4361-992e-a3f57edeed4d",
+   "metadata": {},
+   "source": [
+    "Postprocessing on screen"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "c35f73dc-3e40-482a-ba72-a7e03e16637a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "screen = WorkPlane(Axes((0,0,0), Z, X)).RectangleC(0.5,0.5).Face()\n",
+    "screen.faces.name=\"screen\"\n",
+    "mesh_screen = Mesh(OCCGeometry(screen).GenerateMesh(maxh=0.1)).Curve(1)\n",
+    "fes_screen = H1(mesh_screen, order=13)\n",
+    "gf_screen = GridFunction(fes_screen)\n",
+    "SLPotential = LaplaceSL(uL2*ds(bonus_intorder=intorder))\n",
+    "DLPotential = LaplaceDL(uH1*ds(bonus_intorder=intorder))\n",
+    "repformula = SLPotential(gf) - DLPotential(gf) + SLPotential(mj) - DLPotential(mj)\n",
+    "with TaskManager():\n",
+    "    gf_screen.Set(repformula, definedon=mesh_screen.Boundaries(\"screen\"), dual=False)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "c3ee9250-d2ea-41c5-bec8-491946ded470",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Draw(gf_screen)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f46b978c-68bf-48ba-9768-88c53fba01ff",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -298,7 +329,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
